tests/neg-macros/tasty-string-interpolator-position-b/Test_2.scala

import Macro._

object Test extends App {

  new StringContext().f3() // error

}
